# hyle

./: .gitignore  CNAME  Cargo.toml  DEV_JOURNAL.md  README.md  ROADMAP.md  index.html  install.sh
.github/workflows/: build-sketch.yml  ci.yml  pages.yml
assets/: ui.html
dashboard/: index.html  server.py
demos/: cli-demo.sh
deploy/: add-subdomain.sh  drops-wildcard.conf  hyle-api.service  install-api.sh  setup-tls.sh
docs/: AFFORDANCES.md  ARCHITECTURE_VISION.md  CONTRIBUTING.md  DEV_JOURNAL.md  EVENT_API.md  FEATURES.md  FEATURE_TREE.md  FREE_MODELS.md  IMPROVEMENTS.md  PROMISES.md  README.md  RELEASE_0.3.0.md  ROADMAP_BOOTSTRAP.md  SESSION_2026-01-10.md  agentic-loop-design.md  coggy-demo.html  community.html  control.html  dashboard-demo.html  depth.html  flow.html  index.html  indie.html  learn.html  observable.html  playful.html  reliable.html  secure.html  tui-demo.html  unix.html  velocity.html
docs/reviews/: distributed-systems.md  security-audit.md  unix-philosophy.md  ux-analysis.md
docs/site/: depth.html  indie.html  unix.html
projects/: index.html
projects/datacenters/: index.html
projects/dodeca/: index.html
projects/jsonl/: index.html
projects/labyrinth/: index.html
projects/seismic/: index.html
projects/shared/: geography.js
projects/vitrine/: index.html
site/: community.html  control.html  flow.html  index.html  learn.html  playful.html  reliable.html  velocity.html
src/: agent.rs  backburner.rs  benchmark.rs  bootstrap.rs  client.rs  coggy_bridge.rs  coggy_live.rs  cognitive.rs  config.rs  contracts.rs  docs.rs  environ.rs  eval.rs  git.rs  github.rs  intake.rs  intent.rs  lib.rs  main.rs  models.rs  orchestrator.rs  orchestrator_server.rs  project.rs  prompt.rs  prompts.rs  server.rs  session.rs  skills.rs  telemetry.rs  tmux.rs  tools.rs  traces.rs  ui.rs  ux_metrics.rs
src/api/: main.rs
tests/: user_stories.rs
