[package]
name = "hyle"
version = "0.1.0"
edition = "2021"
description = "Rust-native code assistant - OpenRouter powered, no JS runtime"
license = "MIT"

[[bin]]
name = "hyle"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1"
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client with SSE streaming
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }
reqwest-eventsource = "0.5"
eventsource-stream = "0.2"

# File operations
globwalk = "0.9"
similar = "2"  # For unified diffs

# TUI
crossterm = "0.27"
ratatui = "0.26"

# Fuzzy search for model picker
fuzzy-matcher = "0.3"

# System info for pressure detection
sysinfo = "0.30"

# XDG paths
dirs = "5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
