[package]
name = "hyle"
version = "0.2.0"
edition = "2021"
description = "Rust-native code assistant - OpenRouter powered, no JS runtime"
license = "MIT"

[[bin]]
name = "hyle"
path = "src/main.rs"

[[bin]]
name = "hyle-api"
path = "src/api/main.rs"

[dependencies]
# Core
anyhow = "1"
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client with SSE streaming (manual SSE parsing in client.rs)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }

# HTTP server (for hyle-api)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }

# File operations
globwalk = "0.8"  # Pin to 0.8 for Rust 1.75 compat
glob = "0.3"
regex = "1.10"  # Pin for compat
similar = "2"  # For unified diffs

# TUI
crossterm = "0.27"
ratatui = "0.26"

# Fuzzy search for model picker
fuzzy-matcher = "0.3"

# System info for pressure detection
sysinfo = "0.30"

# XDG paths
dirs = "5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
unicode-width = "0.1"

# Signal handling for backburner mode
ctrlc = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"        # Fast LTO - good balance of speed and size
codegen-units = 16  # Parallel compilation
strip = true

# For minimal binary size (slow build, use `cargo build --profile=small`)
[profile.small]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
